Use flexbox to fix alignment issues on thinner devices

--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,9 @@ h2 {
 }
 
 .checklist li {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   margin: 10px 15px;
 }
 
